mimis-kreativstudio/mimis-kreativstudio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimis-kreativstudio-ingress
  namespace: mimis-kreativstudio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - mimis-kreativstudio.de
    - www.mimis-kreativstudio.de
    secretName: mimis-kreativstudio-tls
  rules:
  - host: mimis-kreativstudio.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mimis-kreativstudio
            port:
              number: 80
  - host: www.mimis-kreativstudio.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mimis-kreativstudio
            port:
              number: 80
